# github-issue-triage

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_COLLABORATION.md  THINKING.md
src/triage/: __init__.py  cli.py  config.py  github.py  llm.py  models.py  pipeline.py  preprocessor.py  reporter.py
src/triage/prompts/: focus.md  system.md
tests/: test_integration.py  test_llm_parsing.py  test_models.py  test_preprocessor.py
tests/fixtures/: sample_llm_response.json
